change the link css and script js link to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     	<title>Carousel</title>
 
-	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>
 
 </head>
 
@@ -39,7 +39,7 @@
 	<button class="arrowPrevious">&#128072;&#127997;</button>
 	<button class="arrowNext">&#128073;&#127997;</button>
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
