--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <body>
 
-	<button class="arrowPrevious">&#128072;&#127997;</button>
+	<button class="darkMode">🌞</button>
 
 	<ul>
+		<button class="arrowPrevious">&#128072;&#127997;</button>
         		
 		<li class="active">
 			
@@ -36,9 +37,9 @@
 
 		</li>
 
-     	</ul>
+		<button class="arrowNext">&#128073;&#127997;</button>
 
-	<button class="arrowNext">&#128073;&#127997;</button>
+     	</ul>
 
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
